2000-06-03  Jeff Freedman  <jeff@amy.nerble.net>

	* Show correct names for food items, reagants, etc.

2000-06-02  Jeff Freedman  <jeff@amy.nerble.net>

	* Change to lt() fixes a couple rendering goofs.
	* gameclk.cc: Start 1st schedule after 6 minutes max.

2000-06-01  Jeff Freedman  <jeff@patches.simutech.com>

	* Spellbook mostly done.  (Spells need intrinsic 0x41 to work.)
	* Spell activation tests/uses reagants.
	* Handle intrinsic 0x6a (flash mouse shape).

2000-05-28  Jeff Freedman  <jeff@amy.nerble.net>

	* Party members use pathfinding.
	* exult.cc: Alt keys work now (by catching their events).
	* 't' key does 'target' as in original game.
	* Scrolling/moving with gumps fixed.

2000-05-28  Willem Jan Palenstijn  <palenstijn@wanadoo.nl>
	* Makefile.be: modified windows makefile to serve as Be makefile
	* gamedat.cc: only include dir.h on windows
	* Midi.cc: only try forked,KMIDI,timidity in XWin
	* Configuration.cc: put .exult.cfg in user's homedir
	* Makefile.win32: added delobjs.cc, effects.cc
	* be_midi.[cc,h], Midi.cc: added (untestable) Be MIDI support.

2000-05-26  Willem Jan Palenstijn  <palenstijn@wanadoo.nl>
	* Configuration.cc: added a temp. BeOS config file section
	* Configuration.cc: is_file set to true, even if file not found

2000-05-26  Jeff Freedman  <jeff@amy.nerble.net>

	* Fade in/fade out working.
	* Sprite effects done.
	* Sleeping (in bed) working.

2000-05-25  Jeff Freedman  <jeff@amy.nerble.net>

	* Orb of Moons, Moongates working (but not perfect visually)
	* Moongates appear animated.

2000-05-25  Willem Jan Palenstijn  <palenstijn@wanadoo.nl>
	* objs.cc: treat bones as containers
	* usecode.cc: make remove_answer accept arrays too
	* usecode.cc: added a _lot_ of intrinsic descriptions from ucdump.c
	* usecode.dis.bz2: a new usecode dump with all known intrinsics

2000-05-25  Coder Infidel  <coder_infidel@hotmail.com>

	* Display a better string when identifying objects that have a
	  quantity